# nextx.repository

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
nextx/: controllers.py  dependency_injection.py  message_bus.py  server.py  settings.py
nextx/dependencies/: utils.py
nextx/domain/: commands.py  events.py  models.py  viewmodels.py
nextx/exceptions/: definitions.py  handlers.py
nextx/grpc/: clients.py
nextx/grpc/protos/: blueprint.proto  blueprint_grpc.py  blueprint_pb2.py  blueprint_pb2.pyi
nextx/interfaces/: iremotes.py  irepository.py  iuow.py
nextx/pubsub/: isusbscriber.py  redis.py
nextx/repository/: mongorepo.py
tests/: garbage.py  test_dependency_injection.py
